[gd_scene load_steps=2 format=3 uid="uid://cch8atc711ur8"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_kih28"]

[node name="PauseMenu" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_kih28")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -131.0
offset_right = 182.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitToMainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to Main Menu"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="toggle_pause"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToMainMenu" to="." method="_on_quit_to_main_menu_button_pressed"]
